.metadata/.plugins/org.eclipse.cdt.ui/vectors.build.log
19:32:20 **** Incremental Build of configuration Debug for project vectors ****
make all 
Building file: ../src/vectors.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/vectors.d" -MT"src/vectors.o" -o "src/vectors.o" "../src/vectors.cpp"
../src/vectors.cpp:6:20: error: non-aggregate type 'vector<std::__1::string>' (aka 'vector<basic_string<char, char_traits<char>, allocator<char> > >') cannot be initialized with an initializer list
    vector<string> v = {"1"};
                   ^   ~~~~~
1 error generated.
make: *** [src/vectors.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

19:32:23 Build Failed. 2 errors, 0 warnings. (took 3s.39ms)

